--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@
 body {
   font-family: "Open Sans", sans-serif;
   color: #444444;
-  background-color: #B6CBB5;
+  /*background-color: #B6CBB5;*/
 }
 
 a {
