--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,6 +81,11 @@ img{
   color: white;
   overflow: scroll;
 }
+
+iframe{
+  height: 200%;
+}
+
 /*--------------------------------------------------------------
 # Back to top button
 --------------------------------------------------------------*/
