--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,7 +83,8 @@ img{
 }
 
 .iframe{
-  height: 300%;
+  height
+  height: 20vw;
 }
 
 /*--------------------------------------------------------------
