--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,6 +84,7 @@ img{
 
 .iframe{
   height: 30vw;
+  font-family: sans-serif;
 }
 
 /*--------------------------------------------------------------
