--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,6 +98,12 @@ img{
   overflow: scroll;
 }
 
+h6{
+	font-weight: bold;
+}
+
+tr:nth-child(even) {background-color: #f2f2f2;}
+
 .iframe{
   height: 30vw;
 }
